--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/squirtle-placeholder.png" />
 </head>
 <body>
-    
+    <h1>AUDRA IS HERE</h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./scripts/scripts.js"></script>
 </body>
