adjusted js namespace

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="shortcut icon" type="image/png" href="./assets/squirtle-placeholder.png" />
 </head>
 <body>
+    <header class="pokebattle">
+        <!-- title -->
+
+        <div class="squirtle"><!-- img placeholder --></div>
+        <div class="instructions"></div>
+    </header>
+    
+    <section class="battleground"></section>
+
+    <section class="user-interaction">
+        <div class="selection">
+            <button class="rock"></button>
+            <button class="grass"></button>
+            <button class="flying"></button>
+        </div>
+
+        <div class="submission">
+            <input type="submit" value=""> <!-- HP: ask if this needs a value -->
+        </div>
+    </section>
+
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./scripts/scripts.js"></script>
