created base functionality

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
         <div class="instructions"></div>
     </header>
     
-    <section class="battleground"></section>
+    <section class="battleground">
+        <div class="selectedPokemon"><img src="./assets/squirtle-placeholder.png" alt="placeholder"></div>
+    </section>
 
     <section class="user-interaction">
         <div class="selection">
-            <button class="rock"></button>
-            <button class="grass"></button>
-            <button class="flying"></button>
+            <button class="rock">rock</button>
+            <button class="grass">grass</button>
+            <button class="flying">flying</button>
         </div>
 
         <div class="submission">
