--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     
     <section class="battleground">
-        <div class="selectedPokemon"><img src="./assets/squirtle-placeholder.png" alt="placeholder"></div>
+        <!-- <div class="selectedPokemon"><img src="./assets/squirtle-placeholder.png" alt="placeholder"></div> -->
     </section>
 
     <section class="user-interaction">
