--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokebattle</title>
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="shortcut icon" type="image/png" href="./assets/squirtle-placeholder.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/squirtle-placeholder.png" /> 
+    <!-- Fix the placeholder -->
 </head>
 <body>
 
