created git ignore file, started results section markup and styling

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
         </div>
     </section>
 
+    <!-- results section -->
+    <section class="results">
+
+        <h2 class="results-title">You win!</h2>
+        <div class="results-gif-container">
+            <img src="./assets/gifs/charizard.gif" alt="" class="results-gif">
+        </div>
+        <button class="reset-button" onClick="window.location.reload();" >reset</button>
+
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./scripts/scripts.js"></script>
