added selection interaction on the js, flipped class names for pokemon selection

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- selection section -->
         <div class="selection">
             <!-- option 1 -->
-            <button class="fire selection-button">
+            <button class="selection-button grass">
                 <div class="button-sprite-container">
                     <img src="./assets/sprites/bulbasaur.png" alt="bulbasaur" class="button-sprite">
                 </div>
@@ -85,7 +85,7 @@
             </button>
 
             <!-- option 2 -->
-            <button class="grass selection-button">
+            <button class="selection-button water">
                 <div class="button-sprite-container">
                     <img src="./assets/sprites/squirtle.png" alt="squirtle" class="button-sprite">
                 </div>
@@ -93,7 +93,7 @@
             </button>
 
             <!-- option 3 -->
-            <button class="water selection-button">
+            <button class="selection-button fire">
                 <div class="button-sprite-container">
                     <img src="./assets/sprites/charmander.png" alt="charmander" class="button-sprite">
                 </div>
