--- a/index.html
+++ b/index.html
@@ -28,13 +28,22 @@
 
         <div class="pulldown-menu">
             <label class="information" for="toggle">
-                <p class="information-title">info</p>
+                <p class="information-title">Info</p>
                 <div class="sprite-container"><img src="./assets/sprites/pikachu.png" alt="information" class="information-sprite"></div>
             </label>
             <input type="checkbox" id="toggle" name="toggle">
 
             <!-- instruction section -->
-            <div class="instructions"></div>
+            <div class="instructions">
+                <div class="wrapper">
+                    <h2>Instructions</h2>
+                    <p>Pick your pokemon and then click battle!</p>
+                    <p><span class="grass-colour">Grass</span> beats <span class="water-colour">water</span>.</p>
+                    <p><span class="water-colour">Water</span> beats <span class="fire-colour">fire</span>.</p>
+                    <p><span class="fire-colour">Fire</span> beats <span class="grass-colour">grass</span>.</p>
+                    <p>Good luck on your journey to become a Pokemon Master!</p>
+                </div>
+            </div>
         </div>
     </header>
     
