dried up JS code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="pokemon-container">
             <div class="browserPokemon">
                 <div class="selected-sprite-container">
-                    <img src="./assets/gifs/charmander.gif" alt="charmander" class="browser-selected-sprite">
+                    <img src="./assets/sprites/question-mark.png" alt="unknown" class="browser-selected-sprite">
                 </div>
                 <div class="sprite-shadow"></div>
             </div>
