--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="shortcut icon" type="image/png" href="./assets/sprites/squirtle.png" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
     <!-- header + information sections -->
@@ -118,11 +119,11 @@
     </section>
 
     <!-- results section -->
-    <section class="results">
+    <section class="results hidden">
 
         <h2 class="results-title">You win!</h2>
         <div class="results-gif-container">
-            <img src="./assets/gifs/charizard.gif" alt="" class="results-gif">
+            <!-- reaction gif added here via js -->
         </div>
         <button class="reset-button" onClick="window.location.reload();" >reset</button>
 
