refactor based on project feedback

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Battle Ground Section -->
     <section class="battleground clearfix wrapper">
         <div class="pokemon-container">
-            <div class="browserPokemon">
+            <div class="browser-pokemon">
                 <div class="selected-sprite-container">
                     <img src="./assets/sprites/question-mark.png" alt="Unknown Pokemon, the browser hasn't made a selection yet." class="browser-selected-sprite">
                 </div>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="pokemon-container">
-            <div class="userPokemon">
+            <div class="user-pokemon">
                 <div class="selected-sprite-container">
                     <img src="./assets/gifs/bulbasaur-back.gif" alt="Bouncing bulbasaur with it's back to the user." class="user-selected-sprite">
                 </div>
